v2.4.31
----------------------------------------------------------------------------------------------------
 * Improved error reporting when waiting for ACME server to verify domains
   or finalizing the order fails, e.g. times out.
 * Increasing the timeouts to wait for ACME server to verify domain names
   and issue the certificate from 30 seconds to 5 minutes.

v2.4.30
----------------------------------------------------------------------------------------------------
 * Change a log level from error to debug when Stapling is enabled but a
   certificate carries no OCSP responder URL.

v2.4.29
----------------------------------------------------------------------------------------------------
 * Fixed HTTP-01 challenges to not carry a final newline, as some ACME
   server fail to ignore it. [Michael Kaufmann (@mkauf)]
 * Fixed missing label+newline in server-status plain text output when
   MDStapling is enabled.

v2.4.28
----------------------------------------------------------------------------------------------------
 * When the server starts, it looks for new, staged certificates to activate. If
   the staged set of files in 'md/staging/<domain>' is messed up, this could
   prevent further renewals to happen. Now, when the staging set is present, but
   could not be activated due to an error, purge the whole directory.

v2.4.27
----------------------------------------------------------------------------------------------------
 * Fix certificate retrieval on ACME renewal to not require a 'Location:'
   header returned by the ACME CA. This was the way it was done in ACME before
   it became an IETF standard. Let's Encrypt still supports this, but other
   CAs do not. Refs #265.
 * Restore compatibility with OpenSSL < 1.1. [ylavic]

v2.4.26
----------------------------------------------------------------------------------------------------
 * Using OCSP stapling information to trigger certificate renewals. Proposed
   by Fraser Tweedale.