@@ -214,7 +214,7 @@ Protocols h2 http/1.1 acme-tls/1
         assert 'renewal' not in status
         print(status)
         assert status['state'] == env.MD_S_COMPLETE
-        assert status['renew-mode'] == 1  # manual
+        assert status['renew-mode'] == 0  # manual
 
     # MD with 2 certificates
     def test_md_920_020(self, env):
